<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".RegisterActivity">

        <RelativeLayout
            android:id="@+id/header"
            style="@style/Header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <ImageButton
                style="@style/GoBackButton"
                android:id="@+id/go_back_button"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/go_back_button"
                />
            <TextView
                style="@style/HeaderText"
                android:text="@string/sign_up_header"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/go_back_button"
                android:layout_marginEnd="12dp"
                />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView_pawsRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paws"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:contentDescription="@string/animal_paws" />

        <View
            android:id="@+id/containerComponents"
            style="@style/ComponentsContainer"
            android:layout_height="554dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_pawsRegister" />

        <TextView
            android:id="@+id/text_nameRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:layout_marginTop="24dp"
            style="@style/InputLabel"
            app:layout_constraintRight_toLeftOf="@id/editText_nameRegister"
            app:layout_constraintStart_toStartOf="@id/editText_nameRegister"
            app:layout_constraintTop_toTopOf="@+id/containerComponents" />

        <EditText
            android:paddingHorizontal="8dp"
            android:id="@+id/editText_nameRegister"
            style="@style/Input"
            android:hint="@string/name_placeholder"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/text_nameRegister"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="48dp"
            android:autofillHints="name"
            android:layout_height="47dp"/>

        <TextView
            android:id="@+id/text_lastNameRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname_label"
            android:layout_marginTop="16dp"
            style="@style/InputLabel"
            app:layout_constraintRight_toLeftOf="@id/editText_nameRegister"
            app:layout_constraintStart_toStartOf="@id/editText_nameRegister"
            app:layout_constraintTop_toBottomOf="@+id/editText_nameRegister" />

        <EditText
            android:paddingHorizontal="8dp"
            android:id="@+id/editText_lastNameRegister"
            style="@style/Input"
            android:hint="@string/lastname_placeholder"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/text_lastNameRegister"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints="name"
            android:layout_height="47dp"/>

        <TextView
            android:id="@+id/text_CPF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpf_label"
            android:layout_marginTop="16dp"
            style="@style/InputLabel"
            app:layout_constraintRight_toLeftOf="@id/editText_lastNameRegister"
            app:layout_constraintStart_toStartOf="@id/editText_lastNameRegister"
            app:layout_constraintTop_toBottomOf="@+id/editText_lastNameRegister" />

        <EditText
            android:paddingHorizontal="8dp"
            android:id="@+id/editText_CPF"
            style="@style/Input"
            android:hint="@string/cpf_placeholder"
            android:inputType="number"
            android:maxLength="14"
            app:layout_constraintTop_toBottomOf="@+id/text_CPF"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints="phone"
            android:layout_height="47dp"/>

        <TextView
            android:id="@+id/text_Cellphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cellphone_label"
            android:layout_marginTop="16dp"
            style="@style/InputLabel"
            app:layout_constraintRight_toLeftOf="@id/editText_CPF"
            app:layout_constraintStart_toStartOf="@id/editText_CPF"
            app:layout_constraintTop_toBottomOf="@+id/editText_CPF" />

        <EditText
            android:paddingHorizontal="8dp"
            android:id="@+id/editText_Cellphone"
            style="@style/Input"
            android:hint="@string/cellphone_placeholder"
            android:inputType="phone"
            android:maxLength="15"
            app:layout_constraintTop_toBottomOf="@+id/text_Cellphone"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints="phone"
            android:layout_height="47dp"/>

        <TextView
            android:id="@+id/text_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="16dp"
            style="@style/InputLabel"
            app:layout_constraintRight_toLeftOf="@id/editText_Cellphone"
            app:layout_constraintStart_toStartOf="@id/editText_Cellphone"
            app:layout_constraintTop_toBottomOf="@+id/editText_Cellphone" />

        <EditText
            android:paddingHorizontal="8dp"
            android:id="@+id/editText_Email"
            style="@style/Input"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/text_Email"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints="emailAddress"
            android:layout_height="47dp"/>

        <TextView
            android:id="@+id/text_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="16dp"
            style="@style/InputLabel"
            app:layout_constraintRight_toLeftOf="@id/editText_Email"
            app:layout_constraintStart_toStartOf="@id/editText_Email"
            app:layout_constraintTop_toBottomOf="@+id/editText_Email" />

        <EditText
            android:paddingHorizontal="8dp"
            android:id="@+id/editText_Password"
            style="@style/Input"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/password_show"
            app:layout_constraintTop_toBottomOf="@+id/text_Password"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints="password"
            android:layout_height="47dp"
            android:drawablePadding="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_register"
            style="@style/LargeButton"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            android:layout_marginHorizontal="74dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>