<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"

        tools:context=".BuildingActivity">

        <RelativeLayout
            android:id="@+id/header"
            style="@style/Header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <ImageButton
                style="@style/GoBackButton"
                android:id="@+id/go_back_button"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/go_back_button"
                />
        </RelativeLayout>

        <ImageView
            android:id="@+id/hammer_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:layout_marginTop="266dp"
            android:src="@drawable/hammer_icon"
            android:contentDescription="@string/building_image"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hammer_image"
            android:layout_marginTop="8dp"
            android:text="@string/building"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/green_dark"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
